--- a/html/index.html
+++ b/html/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Link Font Awesome -->
     <script src="https://kit.fontawesome.com/73f92491af.js" crossorigin="anonymous" async></script>
 
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Finans - finanças pessoais</title>
+    <title>Projeto Star Wars - União do lado negro e lado claro :)</title>
 </head>
 
 <body>
@@ -22,12 +21,8 @@
             <div class="container">
                 <a href="#" class="navbar-brand">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
-                    Projeto Star Wars
+                    <span class="px-4 fs-1"> Projeto Star Wars </span>
                 </a>
-
-                <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
 
                 <div class="collapse navbar-collapse" id="nav-principal">
                     <ul class="navbar-nav ml-auto">
@@ -41,7 +36,7 @@
                             <a href="#" class="nav-link">Documentação</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Download</a>
+                            <a href="dowloads.html" class="nav-link">Downloads</a>
                         </li>
                     </ul>
                 </div>
