Limpeza de código

--- a/html/index.html
+++ b/html/index.html
@@ -69,16 +69,15 @@
             <div class="row">
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
-                        <h2>Saiba para onde vai o seu dinheiro</h2>
+                        <h2>O Projeto</h2>
                         <p>
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet commodi libero itaque aut
                             esse nesciunt repellendus quam dignissimos at corporis.
                         </p>
-                        <a href="#" class="btn btn-primary">Saiba mais</a>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="../img/saiba.png" class="img-fluid">
+                    <img src="../img/empresas.png" class="img-fluid">
                 </div>
             </div> <!-- Fim .row -->
         </div>
@@ -89,16 +88,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="../img/juros.png" class="img-fluid">
+                    <img src="../img/logo_jogo.png" class="img-fluid">
                 </div>
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
-                        <h2>Pare de pagar juros e economize</h2>
+                        <h2>Projeto do Jogo</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia totam assumenda dolores
                             nobis eveniet temporibus.
                         </p>
-                        <a href="#" class="btn btn-primary">Saiba mais</a>
                     </div>
                 </div>
             </div> <!-- Fim .row -->
@@ -134,27 +132,13 @@
     <footer class="mt-4 mb-4">
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-12">
                     <p>
-                        <a href="#" class="text-warning">Home</a>
-                        <a href="#" class="text-warning">Recursos</a>
-                        <a href="#" class="text-warning">Benefícios</a>
-                        <a href="#" class="text-warning">Preços</a>
+                        <a href="#" class="text-warning">Equipe</a>
+                        <a href="#" class="text-warning">Ferramentas</a>
+                        <a href="#" class="text-warning">Documentação</a>
+                        <a href="#" class="text-warning">Downloads</a>
                     </p>
-                </div>
-                <div class="col-md-4 d-flex justify-content-end">
-                    <a href="#" class="btn btn-outline-dark ml-2">
-                        <i class="fa-brands fa-facebook-square"></i>
-                    </a>
-                    <a href="#" class="btn btn-outline-dark ml-2">
-                        <i class="fa-brands fa-instagram-square"></i>
-                    </a>
-                    <a href="#" class="btn btn-outline-dark ml-2">
-                        <i class="fa-brands fa-twitter-square"></i>
-                    </a>
-                    <a href="#" class="btn btn-outline-dark ml-2">
-                        <i class="fa-brands fa-youtube"></i>
-                    </a>
                 </div>
             </div>
         </div>
