--- a/html/dowloads.html
+++ b/html/dowloads.html
@@ -61,6 +61,7 @@
                     <!-- <img src="../img/logo_jogo.png" class="img-fluid"> -->
                 </div>
             </div> <!-- Fim .row -->
+            <div class="espacador"></div>
             <div class="row">
                 <div class="col-md-6">
                     <img src="../img/saiba.png" class="img-fluid">
@@ -77,7 +78,5 @@
             </div> <!-- Fim .row -->
         </div> <!-- /.container -->
     </section> <!-- Fim seção Saiba -->
-
-
 </body>
 </html>
