--- a/html/equipe.html
+++ b/html/equipe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,8 +13,10 @@
     <script src="https://kit.fontawesome.com/73f92491af.js" crossorigin="anonymous" async></script>
 
     <link rel="stylesheet" href="../css/style.css">
-    <title>Projeto Star Wars - Dowloads</title>
+
+    <title>Projeto Star Wars - Equipe</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-warning">
@@ -26,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="nav-principal">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="equipe.html" class="nav-link">Equipe</a>
+                            <a href="#" class="nav-link">Equipe</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Ferramentas</a>
@@ -45,33 +48,42 @@
 
     <section class="caixa">
         <div class="container">
+            <div class="display-2 mb-3"><u>Programadores</u></div>
+            <hr>
             <div class="row">
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
-                        <h2>Código do Jogo!</h2>
+                        <h2>Luiz Palma</h2>
                         <p>
-                            Aqui você pode acessar todos os códigos do jogo, bibliotecas usadas, assets, documentação e muito mais.
+                            Sou o <strong>Luiz Palma</strong> e estou no lado claro da força.<br>
+                            Sou um dos responsáveis por programar o jogo e líder do lado claro da força.<br>
+                            <hr class="linha">
+                            <strong>Sobre Mim:</strong> Desde sempre jogo video games, é meu passa-tempo favorito. Eu lembro como se fosse ontem do dia que eu ganhei meu primeiro video game: um <strong>Mega Drive</strong>. Sonic The Hedgehog, Spider Man e Super Monaco GP eram minhas fitas favoritas.<br>
+                            esse amor por jogos fez com que eu me interessase ainda mais pela área da programação, que também, é por onde pretendo seguir daqui pra frente!
                         </p>
-                        <a href="https://github.com/Luiz-Palma/Tcc-Star-Wars" class="btn btn-primary">GitHub</a>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <!-- <img src="../img/logo_jogo.png" class="img-fluid"> -->
+                    <!-- <img src="../img/luiz.png" class="img-fluid"> -->
                 </div>
             </div> <!-- Fim .row -->
+
             <div class="espacador"></div>
+
             <div class="row">
-                <div class="col-md-6">
-                    <img src="../img/saiba.png" class="img-fluid">
-                </div>
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
-                        <h2>Código do site!</h2>
+                        <h2>Mateus Felix</h2>
                         <p>
-                            Aqui você pode acessar o código desse maravilhoso site.
+                            Sou o <strong>Mateus Felix</strong> e estou no lado negro da força.<br>
+                            Sou um dos responsáveis por programar o jogo.<br>
+                            <hr class="linha">
+                            <strong>Sobre mim:</strong> gosto muito da área e pretendo continuar.
                         </p>
-                        <a href=https://github.com/FalizP/Site-Projeto-Star-Wars class="btn btn-primary">GitHub</a>
                     </div>
+                </div>
+                <div class="col-md-6">
+                    <!-- <img src="../img/mateus.png" class="img-fluid"> -->
                 </div>
             </div> <!-- Fim .row -->
         </div> <!-- /.container -->
