--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="nav-principal">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Equipe</a>
+                            <a href="equipe.html" class="nav-link">Equipe</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Ferramentas</a>
@@ -134,10 +134,10 @@
             <div class="row">
                 <div class="col-md-12">
                     <p>
-                        <a href="#" class="text-warning">Equipe</a>
+                        <a href="equipe.html" class="text-warning">Equipe</a>
                         <a href="#" class="text-warning">Ferramentas</a>
                         <a href="#" class="text-warning">Documentação</a>
-                        <a href="#" class="text-warning">Downloads</a>
+                        <a href="dowloads.html" class="text-warning">Downloads</a>
                     </p>
                 </div>
             </div>
