--- a/html/index.html
+++ b/html/index.html
@@ -71,8 +71,7 @@
                     <div class="align-self-center">
                         <h2>O Projeto</h2>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet commodi libero itaque aut
-                            esse nesciunt repellendus quam dignissimos at corporis.
+                            O nosso projeto de TCC consiste na cooperação entre os cursos técnicos de 3° Ano em Desenvolvimento de Jogos Digitais, 3° Ano em Design de Interiores e 3° Ano em Nutrição. Juntos, a ideia é formar um único TCC na intenção de um projeto maior, para assim enviar ao Centro Paula Souza e em consequência inspirar outros projetos de TCC a se unificarem.
                         </p>
                     </div>
                 </div>
