--- a/html/equipe.html
+++ b/html/equipe.html
@@ -86,6 +86,25 @@
                     <!-- <img src="../img/mateus.png" class="img-fluid"> -->
                 </div>
             </div> <!-- Fim .row -->
+    
+            <div class="display-2 mb-3"><u>Desenhistas</u></div>
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Samir Leno</h2>
+                        <p>
+                            Sou o <strong>Samir Leno</strong> e estou no lado negro da força.<br>
+                            Sou o responsável por criar o desing dos personagens, cenário e criar logos. Também sou o auxiliar de música da equipe.
+                            <hr class="linha">
+                            <strong>Sobre mim:</strong> comecei a desenhar de maneira mais frequente a partir dos 11 anos de idade e venho tentando melhorar minhas habilidades nesses últimos 5 anos.
+Ganhei meu violão com 8 anos de idade e comecei a tratar ele como um instrumento de fato a partir dos 12 anos, venho estudando o instrumento desde lá, aos 14 anos eu migrei e me encontrei no baixo. 
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <!-- <img src="../img/mateus.png" class="img-fluid"> -->
+                </div>
+            </div> <!-- Fim .row -->
         </div> <!-- /.container -->
     </section> <!-- Fim seção Saiba -->
 </body>
