Footer arrumado e cards

--- a/html/dowloads.html
+++ b/html/dowloads.html
@@ -45,36 +45,49 @@
 
     <section class="caixa">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6 d-flex">
-                    <div class="align-self-center">
-                        <h2>Código do Jogo!</h2>
-                        <p>
-                            Aqui você pode acessar todos os códigos do jogo, bibliotecas usadas, assets, documentação e muito mais.
-                        </p>
-                        <a href="https://github.com/Luiz-Palma/Tcc-Star-Wars" class="btn btn-primary">GitHub</a>
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6 d-flex">
+                        <div class="align-self-center">
+                            <h2>Código do Jogo!</h2>
+                            <p>
+                                Aqui você pode acessar todos os códigos do jogo, bibliotecas usadas, assets, documentação e muito mais.
+                            </p>
+                            <a href="https://github.com/Luiz-Palma/Tcc-Star-Wars" class="btn btn-primary">GitHub</a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <!-- <img src="../img/logo_jogo.png" class="img-fluid"> -->
-                </div>
-            </div> <!-- Fim .row -->
-            <div class="espacador"></div>
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="../img/saiba.png" class="img-fluid">
-                </div>
-                <div class="col-md-6 d-flex">
-                    <div class="align-self-center">
-                        <h2>Código do site!</h2>
-                        <p>
-                            Aqui você pode acessar o código desse maravilhoso site.
-                        </p>
-                        <a href=https://github.com/FalizP/Site-Projeto-Star-Wars class="btn btn-primary">GitHub</a>
+                    <div class="col-md-6">
+                        <!-- <img src="../img/logo_jogo.png" class="img-fluid"> -->
                     </div>
-                </div>
-            </div> <!-- Fim .row -->
+                </div> <!-- Fim .row -->
+                <div class="espacador"></div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="../img/saiba.png" class="img-fluid">
+                    </div>
+                    <div class="col-md-6 d-flex">
+                        <div class="align-self-center">
+                            <h2>Código do site!</h2>
+                            <p>
+                                Aqui você pode acessar o código desse maravilhoso site.
+                            </p>
+                            <a href=https://github.com/FalizP/Site-Projeto-Star-Wars class="btn btn-primary">GitHub</a>
+                        </div>
+                    </div>
+                </div> <!-- Fim .row -->
+            </div>
         </div> <!-- /.container -->
-    </section> <!-- Fim seção Saiba -->
+    </section>
+
+    <footer class="mt-4 mb-4 bg-warning">
+        <div class="container text-center align-content-center p-3">
+            <p>
+                <a href="equipe.html" class="text-white">Equipe</a>
+                <a href="#" class="text-white">Ferramentas</a>
+                <a href="#" class="text-white">Documentação</a>
+                <a href="dowloads.html" class="text-white">Downloads</a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
