--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -61,97 +62,98 @@
                 </div>
             </div>
         </div>
-    </section> <!-- Fim seção Home -->
+    </section>
 
     <section class="caixa">
-        <!-- Início seção Saiba -->
         <div class="container">
-            <div class="row">
-                <div class="col-md-6 d-flex">
-                    <div class="align-self-center">
-                        <h2>O Projeto</h2>
-                        <p>
-                            O nosso projeto de TCC consiste na cooperação entre os cursos técnicos de 3° Ano em Desenvolvimento de Jogos Digitais, 3° Ano em Design de Interiores e 3° Ano em Nutrição. Juntos, a ideia é formar um único TCC na intenção de um projeto maior, para assim enviar ao Centro Paula Souza e em consequência inspirar outros projetos de TCC a se unificarem.
-                        </p>
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6 d-flex">
+                        <div class="align-self-center">
+                            <h2>O Projeto</h2>
+                            <p>
+                                O nosso projeto de TCC consiste na cooperação entre os cursos técnicos de 3° Ano em Desenvolvimento de Jogos Digitais, 3° Ano em Design de Interiores e 3° Ano em Nutrição. Juntos, a ideia é formar um único TCC na intenção de um projeto maior, para assim enviar ao Centro Paula Souza e em consequência inspirar outros projetos de TCC a se unificarem.
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <img src="../img/empresas.png" class="img-fluid">
-                </div>
-            </div> <!-- Fim .row -->
+                    <div class="col-md-6">
+                        <img src="../img/empresas.png" class="img-fluid">
+                    </div>
+                </div> <!-- Fim .row -->
+            </div>
         </div>
-    </section> <!-- Fim seção Saiba -->
+    </section>
 
     <section class="caixa">
-        <!-- Início seção Juros -->
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="../img/logo_jogo.png" class="img-fluid">
-                </div>
-                <div class="col-md-6 d-flex">
-                    <div class="align-self-center">
-                        <h2>Projeto do Jogo</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia totam assumenda dolores
-                            nobis eveniet temporibus.
-                        </p>
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="../img/logo_jogo.png" class="img-fluid">
                     </div>
-                </div>
-            </div> <!-- Fim .row -->
+                    <div class="col-md-6 d-flex">
+                        <div class="align-self-center">
+                            <h2>Projeto do Jogo</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia totam assumenda dolores
+                                nobis eveniet temporibus.
+                            </p>
+                        </div>
+                    </div>
+                </div> <!-- Fim .row -->
+            </div>
         </div>
     </section> <!-- Fim seção Juros -->
 
     <section class="caixa">
         <!-- Início seção Recursos -->
         <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="../img/facil.png" class="img-fluid">
-                    <h4>Fácil de usar</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi a, doloremque minima distinctio
-                        at harum ducimus dolorum ipsa accusantium natus!</p>
-                </div>
-                <div class="col-md-4">
-                    <img src="../img/economize.png" class="img-fluid">
-                    <h4>Fácil de usar</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In omnis quae laboriosam eligendi
-                        reiciendis corporis ipsum minus commodi!</p>
-                </div>
-                <div class="col-md-4">
-                    <img src="../img/suporte.png" class="img-fluid">
-                    <h4>Fácil de usar</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum neque incidunt nostrum beatae
-                        debitis blanditiis vero voluptatibus sapiente illo sunt? Rem!</p>
-                </div>
-            </div> <!-- Fim .row -->
-        </div>
-    </section> <!-- Fim seção Recursos -->
-
-    <footer class="mt-4 mb-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <p>
-                        <a href="equipe.html" class="text-warning">Equipe</a>
-                        <a href="#" class="text-warning">Ferramentas</a>
-                        <a href="#" class="text-warning">Documentação</a>
-                        <a href="dowloads.html" class="text-warning">Downloads</a>
-                    </p>
-                </div>
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="../img/facil.png" class="img-fluid">
+                        <h4>Fácil de usar</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi a, doloremque minima distinctio
+                            at harum ducimus dolorum ipsa accusantium natus!</p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="../img/economize.png" class="img-fluid">
+                        <h4>Fácil de usar</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In omnis quae laboriosam eligendi
+                            reiciendis corporis ipsum minus commodi!</p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="../img/suporte.png" class="img-fluid">
+                        <h4>Fácil de usar</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum neque incidunt nostrum beatae
+                            debitis blanditiis vero voluptatibus sapiente illo sunt? Rem!</p>
+                    </div>
+                </div> <!-- Fim .row -->
             </div>
+        </div>
+    </section>
+
+    <footer class="mt-4 mb-4 bg-warning">
+        <div class="container text-center align-content-center p-3">
+            <p>
+                <a href="equipe.html" class="text-white">Equipe</a>
+                <a href="#" class="text-white">Ferramentas</a>
+                <a href="#" class="text-white">Documentação</a>
+                <a href="dowloads.html" class="text-white">Downloads</a>
+            </p>
         </div>
     </footer>
 
     <!-- Js Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
 </body>
+
 </html>
