Atualizar o equipe.html
Leonardo

--- a/html/equipe.html
+++ b/html/equipe.html
@@ -116,6 +116,22 @@
             <div class="espacador"></div>
             
             <div class="display-2 mb-3"><u>Roteiristas</u></div>
+            <div class="row"> 
+                 <div class="col-md-6 d-flex"> 
+                     <div class="align-self-center"> 
+                         <h2>Luiz Palma</h2> 
+                         <p> 
+                             Sou o <strong>Leonardo Quadrini</strong> e estou no lado negro da força.<br> 
+                             Sou o roteirista chefe, responsável pela elaboração e construção da história do jogo, tal como escrever a monografia do TCC.<br> 
+                             <hr class="linha"> 
+                             <strong>Sobre Mim:</strong>Gosto muito de escrever desde que me entendo por gente, na escola quando pequeno sempre gostei de escrever histórias de aventura. Assim como escrever, sempre fui apaixonado por jogos, suas histórias, artes e infinitas possibilidades de mundos que podem ser criados, trazendo uma imersão praticamente impossível de ser alcançada com filmes e/ou séries.<br> 
+                         </p> 
+                     </div> 
+                 </div> 
+                 <div class="col-md-6"> 
+                     <!-- <img src="../img/luiz.png" class="img-fluid"> --> 
+                 </div> 
+             </div> <!-- Fim .row -->
             <div class="row">
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
