Links atualizados e página documentacao.html

--- a/html/index.html
+++ b/html/index.html
@@ -20,13 +20,13 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-warning">
             <div class="container">
-                <a href="#" class="navbar-brand">
+                <a href="#" class="navbar-brand sm-a">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
                     <span class="px-4 fs-1"> Projeto Star Wars </span>
                 </a>
 
                 <div class="collapse navbar-collapse" id="nav-principal">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav m-lg-auto">
                         <li class="nav-item">
                             <a href="equipe.html" class="nav-link">Equipe</a>
                         </li>
@@ -34,7 +34,7 @@
                             <a href="#" class="nav-link">Ferramentas</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Documentação</a>
+                            <a href="documentacao.html" class="nav-link">Documentação</a>
                         </li>
                         <li class="nav-item">
                             <a href="dowloads.html" class="nav-link">Downloads</a>
@@ -52,7 +52,7 @@
                     <div class="align-self-center">
                         <h1 class="display-4">Projeto Star Wars</h1>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, quaerat.
+                            A junção de vários grupos trabalhando por um mundo melhor, com mais empatia e ajuda ao próximo. Ninguém está sozinho! :)
                         </p>
                     </div>
                 </div>
@@ -112,19 +112,19 @@
                 <div class="row">
                     <div class="col-md-4">
                         <img src="../img/facil.png" class="img-fluid">
-                        <h4>Fácil de usar</h4>
+                        <h4>Empresa 1</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi a, doloremque minima distinctio
                             at harum ducimus dolorum ipsa accusantium natus!</p>
                     </div>
                     <div class="col-md-4">
                         <img src="../img/economize.png" class="img-fluid">
-                        <h4>Fácil de usar</h4>
+                        <h4>TCC</h4>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In omnis quae laboriosam eligendi
                             reiciendis corporis ipsum minus commodi!</p>
                     </div>
                     <div class="col-md-4">
                         <img src="../img/suporte.png" class="img-fluid">
-                        <h4>Fácil de usar</h4>
+                        <h4>Empresa 2</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum neque incidunt nostrum beatae
                             debitis blanditiis vero voluptatibus sapiente illo sunt? Rem!</p>
                     </div>
