--- a/html/dowloads.html
+++ b/html/dowloads.html
@@ -32,7 +32,7 @@
                             <a href="#" class="nav-link">Ferramentas</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Documentação</a>
+                            <a href="documentacao.html" class="nav-link">Documentação</a>
                         </li>
                         <li class="nav-item">
                             <a href="dowloads.html" class="nav-link">Downloads</a>
