--- a/html/equipe.html
+++ b/html/equipe.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Link Font Awesome -->
     <script src="https://kit.fontawesome.com/73f92491af.js" crossorigin="anonymous" async></script>
@@ -36,7 +36,7 @@
                             <a href="#" class="nav-link">Ferramentas</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Documentação</a>
+                            <a href="documentacao.html" class="nav-link">Documentação</a>
                         </li>
                         <li class="nav-item">
                             <a href="dowloads.html" class="nav-link">Downloads</a>
@@ -110,9 +110,11 @@
                         </p>
                     </div>
                 </div>
+                <!--
                 <div class="col-md-6">
                     <img src="../img/saiba.png" class="img-fluid">
                 </div>
+            -->
             </div> <!-- Fim .row -->
             <div class="espacador"></div>
             <div class="row">
@@ -134,6 +136,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
+                    <!--
                     <img src="../img/saiba.png" class="img-fluid"> -->
                 </div>
             </div> <!-- Fim .row -->
