Atualizar o index.html

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Projeto Star Wars - União do lado negro e lado claro :)</title>
+    <title>Projeto Helenos - Uma interessante união entre atenienses e espartanos</title>
 </head>
 
 <body>
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
-                        <h1 class="display-4">Projeto Star Wars</h1>
+                        <h1 class="display-4">Projeto Helenos</h1>
                         <p>
                             A junção de vários grupos trabalhando por um mundo melhor, com mais empatia e ajuda ao próximo. Ninguém está sozinho! :)
                         </p>
@@ -72,7 +72,7 @@
                         <div class="align-self-center">
                             <h2>O Projeto</h2>
                             <p>
-                                O nosso projeto de TCC consiste na cooperação entre os cursos técnicos de 3° Ano em Desenvolvimento de Jogos Digitais, 3° Ano em Design de Interiores e 3° Ano em Nutrição. Juntos, a ideia é formar um único TCC na intenção de um projeto maior, para assim enviar ao Centro Paula Souza e em consequência inspirar outros projetos de TCC a se unificarem.
+                                O nosso projeto de TCC consiste na cooperação entre os cursos técnicos de 3° Ano em Desenvolvimento de Jogos Digitais e 3° Ano em Design de Interiores. Juntos, a ideia é formar um único TCC na intenção de um projeto maior, para assim enviar ao Centro Paula Souza e em consequência inspirar outros projetos de TCC a se unificarem.
                             </p>
                         </div>
                     </div>
