--- a/html/documentacao.html
+++ b/html/documentacao.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Projeto Star Wars - Equipe</title>
+    <title>Projeto Helenos - Equipe</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             <div class="container">
                 <a href="index.html" class="navbar-brand">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
-                    <span class="px-4 fs-1"> Projeto Star Wars </span>
+                    <span class="px-4 fs-1"> Projeto Helenos</span>
                 </a>
 
                 <div class="collapse navbar-collapse" id="nav-principal">
@@ -48,4 +48,5 @@
     </header>
 
 </body>
+
 </html>
