--- a/html/equipe.html
+++ b/html/equipe.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Projeto Star Wars - Equipe</title>
+    <title>Projeto Helenos - Equipe</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             <div class="container">
                 <a href="index.html" class="navbar-brand">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
-                    <span class="px-4 fs-1"> Projeto Star Wars </span>
+                    <span class="px-4 fs-1"> Projeto Helenos </span>
                 </a>
 
                 <div class="collapse navbar-collapse" id="nav-principal">
@@ -55,7 +55,7 @@
                     <div class="align-self-center">
                         <h2>Luiz Palma</h2>
                         <p>
-                            Sou o <strong>Luiz Palma</strong> e estou no lado claro da força.<br>
+                            Sou o <strong>Luiz Palma</strong> e sou um atenienses.<br>
                             Sou um dos responsáveis por programar o jogo e líder do lado claro da força.<br>
                             <hr class="linha">
                             <strong>Sobre Mim:</strong> Desde sempre jogo video games, é meu passa-tempo favorito. Eu
@@ -77,7 +77,7 @@
                     <div class="align-self-center">
                         <h2>Mateus Felix</h2>
                         <p>
-                            Sou o <strong>Mateus Felix</strong> e estou no lado negro da força.<br>
+                            Sou o <strong>Mateus Felix</strong> e sou um atenienses.<br>
                             Sou um dos responsáveis por programar o jogo.<br>
                             <hr class="linha">
                             <strong>Sobre mim:</strong> gosto muito da área e pretendo continuar.
@@ -98,7 +98,7 @@
                     <div class="align-self-center">
                         <h2>Samir Leno</h2>
                         <p>
-                            Sou o <strong>Samir Leno</strong> e estou no lado negro da força.<br>
+                            Sou o <strong>Samir Leno</strong> e sou um espartano.<br>
                             Sou o responsável por criar o desing dos personagens, cenário e criar logos. Também sou o
                             auxiliar de música da equipe.
                             <hr class="linha">
@@ -122,7 +122,7 @@
                     <div class="align-self-center">
                         <h2>Marco Antonio</h2>
                         <p>
-                            Sou o <strong>Marco Antonio</strong> e estou no lado negro da força.<br>
+                            Sou o <strong>Marco Antonio</strong> e sou um espartano.<br>
                             Sou um dos responsáveis por fazer os desenhos ,ajudarei a fazer as animações do
                             jogo e ficarei encarregado de fazer a edição do trailer do jogo.
                             <hr class="linha">
@@ -148,7 +148,7 @@
                     <div class="align-self-center">
                         <h2>Gustavo Aragaki</h2>
                         <p>
-                            Sou o <strong>Gustavo Aragaki</strong> e estou no lado claro da força.<br>
+                            Sou o <strong>Gustavo Aragaki</strong> e sou um espartano.<br>
                             Sou responsável pela animação e design do jogo
                             <hr class="linha">
                             <strong>Sobre mim:</strong> Gosto de jogar jogos online, desenhar e assistir animações,
@@ -172,7 +172,7 @@
                     <div class="align-self-center">
                         <h2>Vitor Leite</h2>
                         <p>
-                            Sou o <strong>Vitor Leite</strong> e estou no lado claro da força.<br>
+                            Sou o <strong>Vitor Leite</strong> e sou um espartano.<br>
                             Sou responsável por cuidar de toda a parte sonora, desde passos até músicas hambientais.<br>
                             <hr class="linha">
                             <strong>Sobre Mim:</strong> Meu passa tempo preferido é jogar vôlei e cantar (apesar de não
@@ -196,7 +196,7 @@
                     <div class="align-self-center">
                         <h2>Leonardo Quadrini</h2>
                         <p>
-                            Sou o <strong>Leonardo Quadrini</strong> e estou no lado negro da força.<br>
+                            Sou o <strong>Leonardo Quadrini</strong> e sou um atenienses.<br>
                             Sou o roteirista chefe, responsável pela elaboração e construção
                             da história do jogo, tal como escrever a monografia do TCC.<br>
                             <hr class="linha">
@@ -218,7 +218,7 @@
                     <div class="align-self-center">
                         <h2>Lucas Aoki</h2>
                         <p>
-                            Sou o <strong>Lucas Aoki</strong> e estou no lado claro da força.<br>
+                            Sou o <strong>Lucas Aoki</strong> e sou um atenienses.<br>
                             Sou o Co-escritor, responsável por auxiliar o escritor a desempenhar seu papel sem erros
                             <hr class="linha">
                             <strong>Sobre mim:</strong> sou um grande fã de jogos, e minha parte favorita neles
