--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <a href="#" class="navbar-brand sm-a">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
-                    <span class="px-4 fs-1"> Projeto Star Wars </span>
+                    <span class="px-4 fs-1"> Projeto Helenos </span>
                 </a>
 
                 <div class="collapse navbar-collapse" id="nav-principal">
@@ -111,20 +111,20 @@
             <div class="card">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="../img/facil.png" class="img-fluid">
-                        <h4>Empresa 1</h4>
+                        <img src="../img/pantora.png" class="img-fluid">
+                        <h4>Pantora</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi a, doloremque minima distinctio
                             at harum ducimus dolorum ipsa accusantium natus!</p>
                     </div>
                     <div class="col-md-4">
-                        <img src="../img/economize.png" class="img-fluid">
-                        <h4>TCC</h4>
+                        <img src="../img/helenos.png" class="img-fluid">
+                        <h4>Helenos - TCC</h4>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In omnis quae laboriosam eligendi
                             reiciendis corporis ipsum minus commodi!</p>
                     </div>
                     <div class="col-md-4">
-                        <img src="../img/suporte.png" class="img-fluid">
-                        <h4>Empresa 2</h4>
+                        <img src="../img/cerferus.png" class="img-fluid">
+                        <h4>Cerferus</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum neque incidunt nostrum beatae
                             debitis blanditiis vero voluptatibus sapiente illo sunt? Rem!</p>
                     </div>
