--- a/html/dowloads.html
+++ b/html/dowloads.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/73f92491af.js" crossorigin="anonymous" async></script>
 
     <link rel="stylesheet" href="../css/style.css">
-    <title>Projeto Star Wars - Dowloads</title>
+    <title>Projeto Helenos - Dowloads</title>
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
             <div class="container">
                 <a href="index.html" class="navbar-brand">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
-                    <span class="px-4 fs-1"> Projeto Star Wars </span>
+                    <span class="px-4 fs-1"> Projeto Helenos </span>
                 </a>
 
                 <div class="collapse navbar-collapse" id="nav-principal">
@@ -63,7 +63,7 @@
                 <div class="espacador"></div>
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="../img/saiba.png" class="img-fluid">
+                        <img src="../img/site.png" class="img-fluid">
                     </div>
                     <div class="col-md-6 d-flex">
                         <div class="align-self-center">
