--- a/html/dowloads.html
+++ b/html/dowloads.html
@@ -18,18 +18,18 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-warning">
             <div class="container">
-                <a href="index.html" class="navbar-brand">
+                <a href="#" class="navbar-brand">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
                     <span class="px-4 fs-1"> Projeto Helenos </span>
                 </a>
 
                 <div class="collapse navbar-collapse" id="nav-principal">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav m-lg-auto">
                         <li class="nav-item">
                             <a href="equipe.html" class="nav-link">Equipe</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Ferramentas</a>
+                            <a href="ferramentas.html" class="nav-link">Ferramentas</a>
                         </li>
                         <li class="nav-item">
                             <a href="documentacao.html" class="nav-link">Documentação</a>
@@ -42,7 +42,7 @@
             </div>
         </nav>
     </header>
-
+    
     <section class="caixa">
         <div class="container">
             <div class="card">
@@ -53,7 +53,7 @@
                             <p>
                                 Aqui você pode acessar todos os códigos do jogo, bibliotecas usadas, assets, documentação e muito mais.
                             </p>
-                            <a href="https://github.com/Luiz-Palma/Tcc-Star-Wars" class="btn btn-primary">GitHub</a>
+                            <a href="https://github.com/LHPalma/Jogo-Helenos" class="btn btn-primary" target="_blank" rel="noreferrer noopener" >GitHub</a>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -71,7 +71,7 @@
                             <p>
                                 Aqui você pode acessar o código desse maravilhoso site.
                             </p>
-                            <a href=https://github.com/FalizP/Site-Projeto-Star-Wars class="btn btn-primary">GitHub</a>
+                            <a href=https://github.com/LHPalma/Projeto-Helenos class="btn btn-primary" target="_blank" rel="noreferrer noopener">GitHub</a>
                         </div>
                     </div>
                 </div> <!-- Fim .row -->
@@ -83,8 +83,8 @@
         <div class="container text-center align-content-center p-3">
             <p>
                 <a href="equipe.html" class="text-white">Equipe</a>
-                <a href="#" class="text-white">Ferramentas</a>
-                <a href="#" class="text-white">Documentação</a>
+                <a href="ferramentas.html" class="text-white">Ferramentas</a>
+                <a href="documentacao.html" class="text-white">Documentação</a>
                 <a href="dowloads.html" class="text-white">Downloads</a>
             </p>
         </div>
