--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-warning">
             <div class="container">
-                <a href="#" class="navbar-brand sm-a">
+                <a href="#" class="navbar-brand">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
                     <span class="px-4 fs-1"> Projeto Helenos </span>
                 </a>
@@ -31,7 +31,7 @@
                             <a href="equipe.html" class="nav-link">Equipe</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Ferramentas</a>
+                            <a href="ferramentas.html" class="nav-link">Ferramentas</a>
                         </li>
                         <li class="nav-item">
                             <a href="documentacao.html" class="nav-link">Documentação</a>
@@ -113,20 +113,29 @@
                     <div class="col-md-4">
                         <img src="../img/pantora.png" class="img-fluid">
                         <h4>Pantora</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi a, doloremque minima distinctio
-                            at harum ducimus dolorum ipsa accusantium natus!</p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi a, doloremque minima distinctio
+                            at harum ducimus dolorum ipsa accusantium natus!
+                        </p>
+                        <a href="pantora.html" class="btn btn-primary w-100" target="_blank" rel="noreferrer noopener">Pantora</a>
                     </div>
                     <div class="col-md-4">
                         <img src="../img/helenos.png" class="img-fluid">
                         <h4>Helenos - TCC</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In omnis quae laboriosam eligendi
-                            reiciendis corporis ipsum minus commodi!</p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. In omnis quae laboriosam eligendi
+                            reiciendis corporis ipsum minus commodi!
+                        </p>
+                        <a href="documentacao.html" class="btn btn-primary w-100">Documentação</a>
                     </div>
                     <div class="col-md-4">
                         <img src="../img/cerferus.png" class="img-fluid">
                         <h4>Cerferus</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum neque incidunt nostrum beatae
-                            debitis blanditiis vero voluptatibus sapiente illo sunt? Rem!</p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum neque incidunt nostrum beatae
+                            debitis blanditiis vero voluptatibus sapiente illo sunt? Rem!
+                        </p>
+                        <a href="cerferus.html" class="btn btn-primary w-100" target="_blank" rel="noreferrer noopener">Cerferus</a>
                     </div>
                 </div> <!-- Fim .row -->
             </div>
@@ -137,8 +146,8 @@
         <div class="container text-center align-content-center p-3">
             <p>
                 <a href="equipe.html" class="text-white">Equipe</a>
-                <a href="#" class="text-white">Ferramentas</a>
-                <a href="#" class="text-white">Documentação</a>
+                <a href="ferramentas.html" class="text-white">Ferramentas</a>
+                <a href="documentacao.html" class="text-white">Documentação</a>
                 <a href="dowloads.html" class="text-white">Downloads</a>
             </p>
         </div>
