--- a/html/equipe.html
+++ b/html/equipe.html
@@ -22,18 +22,18 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-warning">
             <div class="container">
-                <a href="index.html" class="navbar-brand">
+                <a href="#" class="navbar-brand">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
                     <span class="px-4 fs-1"> Projeto Helenos </span>
                 </a>
 
                 <div class="collapse navbar-collapse" id="nav-principal">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav m-lg-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Equipe</a>
+                            <a href="equipe.html" class="nav-link">Equipe</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Ferramentas</a>
+                            <a href="ferramentas.html" class="nav-link">Ferramentas</a>
                         </li>
                         <li class="nav-item">
                             <a href="documentacao.html" class="nav-link">Documentação</a>
@@ -240,8 +240,8 @@
         <div class="container text-center align-content-center p-3">
             <p>
                 <a href="equipe.html" class="text-white">Equipe</a>
-                <a href="#" class="text-white">Ferramentas</a>
-                <a href="#" class="text-white">Documentação</a>
+                <a href="ferramentas.html" class="text-white">Ferramentas</a>
+                <a href="documentacao.html" class="text-white">Documentação</a>
                 <a href="dowloads.html" class="text-white">Downloads</a>
             </p>
         </div>
