--- a/html/ferramentas.html
+++ b/html/ferramentas.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Link Font Awesome -->
     <script src="https://kit.fontawesome.com/73f92491af.js" crossorigin="anonymous" async></script>
 
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Projeto Helenos - Equipe</title>
+    <title>Projeto Helenos - Uma interessante união entre atenienses e espartanos</title>
 </head>
 
 <body>
@@ -46,7 +44,7 @@
             </div>
         </nav>
     </header>
-
+    
     <footer class="mt-4 mb-4 bg-warning">
         <div class="container text-center align-content-center p-3">
             <p>
