Página Ferramentas iniciada.

--- a/html/ferramentas.html
+++ b/html/ferramentas.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -12,15 +13,14 @@
     <script src="https://kit.fontawesome.com/73f92491af.js" crossorigin="anonymous" async></script>
 
     <link rel="stylesheet" href="../css/style.css">
-
-    <title>Projeto Helenos - Uma interessante união entre atenienses e espartanos</title>
+    <title>Projeto Helenos - Dowloads</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-warning">
             <div class="container">
-                <a href="#" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
                     <span class="px-4 fs-1"> Projeto Helenos </span>
                 </a>
@@ -44,10 +44,53 @@
             </div>
         </nav>
     </header>
-    
-    <footer class="mt-4 mb-4 bg-warning">
-        <div class="container text-center align-content-center p-3">
-            <p>
+
+    <section class="caixa">
+        <div class="container">
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6 d-flex">
+                        <div class="align-self-center">
+                            <h2>Unity Engine</h2>
+                            <p>
+                                A engine escolhida foi a Unity, fundada pelos engenheiros de software David Helgason e Joachim Ante, juntamente com o designer gráfico Nicholas Francis. A primeira versão da Unity, a Unity 1.0, foi anunciada na Apple Worldwide Developers Conference em 2005 e lançada em 8 de junho do mesmo ano, utilizando o C# como linguagem principal.
+                                A Unity é uma engine de criação de jogos digitais que permite criar gráficos tanto em 2D quanto em 3D para plataformas mobile, consoles de mesa e desktops.
+                                Utilizamos a versão Unity 2021, lançada em 23 de março de 2021. Escolhemos essa versão porque é uma das ferramentas gratuitas mais completas do mercado para empresas indie.
+
+                            </p>
+                            <a href="https://unity.com/pt" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Unity</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="../img/Unity_Logo.svg" class="img-fluid">
+                    </div>
+                </div> <!-- Fim .row -->
+
+                <div class="espacador"></div>
+                
+                <div class="row align-items-center">
+                    <div class="col-md-6 d-flex">
+                        <div class="align-self-center">
+                            <h2>Visual Studio 2022</h2>
+                            <p>
+                                TODO: Texto
+                            </p>
+                            <a href="https://visualstudio.microsoft.com/pt-br/vs/" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Visual Studio 2022</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex justify-content-center">
+                        <div class="align-self-center">
+                            <img src="../img/VisualStudio22_Logo.svg" class="img-">
+                        </div>
+                    </div>
+                </div> <!-- Fim .row -->
+            </div>
+        </div> <!-- /.container -->
+    </section>
+
+    <footer class="mt-4 p-4 bg-warning">
+        <div class="d-flex justify-content-center">
+            <p> <!-- "container text-center align-content-center p-3 -->
                 <a href="equipe.html" class="text-white">Equipe</a>
                 <a href="ferramentas.html" class="text-white">Ferramentas</a>
                 <a href="documentacao.html" class="text-white">Documentação</a>
@@ -55,17 +98,6 @@
             </p>
         </div>
     </footer>
-
-    <!-- Js Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
 </body>
 
 </html>
