--- a/html/index.html
+++ b/html/index.html
@@ -111,7 +111,7 @@
             <div class="card">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="../img/pantora.png" class="img-fluid">
+                        <img src="../img/Pantora_Logo.png" class="img-fluid">
                         <h4>Pantora</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi a, doloremque minima distinctio
@@ -129,7 +129,7 @@
                         <a href="documentacao.html" class="btn btn-primary w-100">Documentação</a>
                     </div>
                     <div class="col-md-4">
-                        <img src="../img/cerferus.png" class="img-fluid">
+                        <img src="../img/Cerferus_Logo.png" class="img-fluid">
                         <h4>Cerferus</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum neque incidunt nostrum beatae
@@ -142,9 +142,9 @@
         </div>
     </section>
 
-    <footer class="mt-4 mb-4 bg-warning">
-        <div class="container text-center align-content-center p-3">
-            <p>
+    <footer class="mt-4 p-4 bg-warning">
+        <div class="d-flex justify-content-center">
+            <p> <!-- "container text-center align-content-center p-3 -->
                 <a href="equipe.html" class="text-white">Equipe</a>
                 <a href="ferramentas.html" class="text-white">Ferramentas</a>
                 <a href="documentacao.html" class="text-white">Documentação</a>
