--- a/html/index.html
+++ b/html/index.html
@@ -109,7 +109,7 @@
         <!-- Início seção Recursos -->
         <div class="container">
             <div class="card">
-                <div class="row">
+                <div class="row d-flex justify-content-center">
                     <div class="col-md-4">
                         <img src="../img/Pantora_Logo.png" class="img-fluid">
                         <h4>Pantora</h4>
