--- a/html/documentacao.html
+++ b/html/documentacao.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-warning">
             <div class="container">
-                <a href="#" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
                     <span class="px-4 fs-1"> Projeto Helenos </span>
                 </a>
@@ -47,8 +47,34 @@
         </nav>
     </header>
 
-    <footer class="mt-4 mb-4 bg-warning">
-        <div class="container text-center align-content-center p-3">
+
+    <section class="caixa">
+        <div class="container">
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6 d-flex justify-content-center">
+                        Arquivo da monografia ou Game Design Document (GDD) do Trabalho de Conclusão de curso do Projeto Helenos - Atenas & Esparta
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-2"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/monografia.pdf" class="btn btn-primary w-100" target="_blank">Ler GDD</a>
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-1"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/monografia.zip" class="btn btn-primary w-100" download="Projeto Helenos - monografia (gdd).zip" type="application/zip">Baixar GDD</a>
+                    </div>
+                </div> <!-- /.row -->
+            </div>
+        </div> <!-- /.card -->
+    </section>
+
+
+    <footer class="mt-4 p-4 bg-warning">
+        <div class="d-flex justify-content-center">
             <p>
                 <a href="equipe.html" class="text-white">Equipe</a>
                 <a href="ferramentas.html" class="text-white">Ferramentas</a>
