--- a/html/dowloads.html
+++ b/html/dowloads.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-warning">
             <div class="container">
-                <a href="#" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
                     <!-- <img src="../img/logo.png" alt="" width="142"> -->
                     <span class="px-4 fs-1"> Projeto Helenos </span>
                 </a>
@@ -79,8 +79,8 @@
         </div> <!-- /.container -->
     </section>
 
-    <footer class="mt-4 mb-4 bg-warning">
-        <div class="container text-center align-content-center p-3">
+    <footer class="mt-4 p-4 bg-warning">
+        <div class="d-flex justify-content-center">
             <p>
                 <a href="equipe.html" class="text-white">Equipe</a>
                 <a href="ferramentas.html" class="text-white">Ferramentas</a>
