--- a/html/equipe.html
+++ b/html/equipe.html
@@ -236,8 +236,8 @@
         </div> <!-- /.container -->
     </section>
 
-    <footer class="mt-4 mb-4 bg-warning">
-        <div class="container text-center align-content-center p-3">
+    <footer class="mt-4 p-4 bg-warning">
+        <div class="d-flex justify-content-center">
             <p>
                 <a href="equipe.html" class="text-white">Equipe</a>
                 <a href="ferramentas.html" class="text-white">Ferramentas</a>
@@ -246,6 +246,17 @@
             </p>
         </div>
     </footer>
+
+    <!-- Js Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
